--- a/src/components/PdfPages/Conection/Conection.css
+++ b/src/components/PdfPages/Conection/Conection.css
@@ -1,5 +1,5 @@
 
-.mainreplication {
+.mainconection {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -7,7 +7,7 @@
     width: 100%;
     margin-bottom: var(--margin-xxl);
 }
-.replication {
+.conection {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -18,14 +18,14 @@
 
 }
 
-.imgreplication {
+.imgconection {
     border: 1px solid rgb(0, 0, 0);
     border-radius: 5px;
     width: 100%;
 
     /* padding: var(--padding-l); */
 }
-.replication p {
+.conection p {
     max-width: 100%;
     
 }
