--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300..700;1,300..700&family=Montaga&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-@import url("https://use.typekit.net/nyb1sda.css");
 
 
 
@@ -20,8 +19,8 @@
   --vm-label-5: violet;
   --vm-label-6: blue;
 
-  --primary-font: "acumin-pro", sans-serif;
-  --secondary-font: "acumin-pro", sans-serif;
+  --primary-font: "Poppins", sans-serif;
+  --secondary-font: "Poppins", sans-serif;
 
   --font-size-xs:12px;
   --font-size-s:14px;
@@ -81,8 +80,9 @@ body{
   /* font-family: var(--primary-font); */
   color: var(--vm-primary);
   background-color: var(--vm-secondary);
-  font-family: "acumin-pro", sans-serif;
+  font-family: "Poppins", sans-serif;
 font-weight: 400;
 font-style: normal;
 
 }
+
