--- a/src/Pages/Pdf/Pdf.css
+++ b/src/Pages/Pdf/Pdf.css
@@ -1,6 +1,13 @@
 
 
 .main-pdf {
-    /* border: 2px solid red; */
+     /* border: 1px solid rgb(82, 82, 82); */ 
+     display: flex;
+     flex-direction: column;
+     background-color: white;
+     box-shadow: 0 0 30px rgba(105, 105, 105, 0.42);
+     border-radius: 5px;
+     
     min-height: calc(100svh - 50px);
+    max-width: 1000px;
 }
