--- a/src/components/PdfPages/Estructuras/Estructuras.css
+++ b/src/components/PdfPages/Estructuras/Estructuras.css
@@ -27,6 +27,8 @@
     /* padding: var(--padding-l); */
 }
 .estructuras p {
+    font-weight: 400;
+    font-size: 10px;
     max-width: 100%;
     
 }
