--- a/src/components/PdfPages/Replicaction/Replication.css
+++ b/src/components/PdfPages/Replicaction/Replication.css
@@ -27,6 +27,8 @@
 }
 .replication p {
     max-width: 100%;
+    font-weight: 400;
+    font-size: 10px;
     
 }
 .contenedortextos {
@@ -36,3 +38,9 @@
 
 }
 
+
+.separadorfotos {
+    height: 1px;
+    width: 100%;
+    background-color: black;
+}
